# programming-htlwrn

./: .gitignore  POS_Matura_Themen.md  README.md
4th/2017_4bhif_aufgabe1_lampalzer_konstantin/: 2017_4bhif_aufgabe1_lampalzer_konstantin-DESKTOP-6BKJB3G.sln  2017_4bhif_aufgabe1_lampalzer_konstantin.sln
4th/2017_4bhif_aufgabe2_lampalzer_konstantin/: 2017_4bhif_aufgabe2_lampalzer_konstantin.sln
4th/2017_4bhif_aufgabe3_lampalzer_konstantin/: 2017_4bhif_aufgabe3_lampalzer_konstantin.sln
4th/2017_4bhif_aufgabe4_lampalzer_konstantin/: 2017_4bhif_aufgabe4_lampalzer_konstantin.sln  LICENSE.txt
4th/2017_4bhif_aufgabe5_lampalzer_konstantin/: 2017_4bhif_aufgabe5_lampalzer_konstantin.sln
4th/2017_4bhif_aufgabe6_lampalzer_konstantin/: 2017_4bhif_aufgabe6_lampalzer_konstantin.sln
4th/2017_4bhif_aufgabe8_lampalzer_konstantin/: 2017_4bhif_aufgabe8_lampalzer_konstantin.sln  orte.csv
4th/ChainOfResponsibility/: AbstractLogger.cs  ChainOfResponsibility.cs  ChainOfResponsibility.sln  DebugLogger.cs  ErrorLogger.cs  InfoLogger.cs
4th/Referate/: Abstract Factory.pptx  Chain of Responsibility.pptx  Facade-Pattern.pptx  Factory Pattern.pptx  Nullobjekt_Linda_Maschek_Handout.docx  Prototype.pptx  Sate_DesignPattern.docx
5th/ConcurrentPrimeCalculator/: main.cpp
5th/FlightPlanner/: README.md  addroutedialog.cpp  addroutedialog.h  dbmanager.h  (+8 more)
5th/graph/: meson.build
5th/graph/include/: graph.hpp  node.hpp
5th/graph/src/: main.cpp
5th/math-parser/: meson_options.txt
5th/math-parser/include/: expressions.hpp  parser.hpp
ConcurrentPrimeCalculator/: main.cpp
EasterPlanner/: EasterPlanner.pro  center.h  coordinate.h  dbmanager.h  drawablemapwidget.cpp  drawablemapwidget.h  mainwindow.cpp  mainwindow.ui  person.h
FlightPlanner/: FlightPlaner.pro  airline.h  airport.h  breadthfirstsearchalgorithm.h  customsearchalgorithm.h  dbmanager.h  dijkstrasearchalgorithm.h  drawablemapwidget.cpp  drawablemapwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  route.h  searchalgorithm.h  text.sh
Notes/: Notes.pro  Notes.pro.user.445f8e2  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.cpp  note.h  paintwidget.cpp  paintwidget.h  point.cpp  point.h
PThreads/: CMakeCache.txt  CMakeLists.txt  Makefile  PThreads  cmake_install.cmake  readme.md
UltimateFlightPlanner/: UltimateFlightPlanner.pro  airline.h  database.h  drawablemapwidget.cpp  drawablemapwidget.h  mainwindow.cpp  mainwindow.ui  resources.qrc
XMLParser/: XMLParser.pro  mainwindow.cpp
math-parser/: meson.build
(+203 files in other folders)
